WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122620
currentThis and currentArguments crash if called from outside a callback
https://bugs.webkit.org/show_bug.cgi?id=122620
Summary
currentThis and currentArguments crash if called from outside a callback
Mark Hahnenberg
Reported
2013-10-10 13:35:49 PDT
The documentation for these methods claim that they will return nil if called from somewhere other than an API callback, but currently they both crash.
Attachments
Patch
(2.51 KB, patch)
2013-10-10 13:51 PDT
,
Mark Hahnenberg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Hahnenberg
Comment 1
2013-10-10 13:51:20 PDT
Created
attachment 213925
[details]
Patch
WebKit Commit Bot
Comment 2
2013-10-10 15:01:55 PDT
Comment on
attachment 213925
[details]
Patch Clearing flags on attachment: 213925 Committed
r157258
: <
http://trac.webkit.org/changeset/157258
>
WebKit Commit Bot
Comment 3
2013-10-10 15:01:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug