currentThis and currentArguments crash if called from outside a callback https://bugs.webkit.org/show_bug.cgi?id=122620

Reviewed by Filip Pizlo.

The documentation for these methods claims that they will return nil if called
from somewhere other than an API callback, but currently they both crash.

* API/JSContext.mm:
(+[JSContext currentThis]):
(+[JSContext currentArguments]):
* API/tests/testapi.mm:


Canonical link: https://commits.webkit.org/140727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157258 268f45cc-cd09-0410-ab3c-d52691b4dbfc